graph/formats/rdf/parse.go

//line parse.rl:1
// Go code generated by go generate gonum.org/v1/gonum/graph/formats/rdf; DO NOT EDIT.

// Copyright ©2020 The Gonum Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

package rdf

import (
	"fmt"
	"unicode"
	"net/url"
)


//line parse.go:19
const nquads_start int = 1
const nquads_first_final int = 87
const nquads_error int = 0

const nquads_en_statement int = 1


//line parse.rl:31


func parse(data []rune) (Statement, error) {
	var (
		cs, p int
		pe    = len(data)
		eof   = pe

		subject   = -1
		predicate = -1
		object    = -1
		label     = -1
		iri       = -1

		s Statement
	)

	
//line parse.go:46
	{
	cs = nquads_start
	}

//line parse.rl:49

	
//line parse.go:54
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 1:
		goto st_case_1
	case 0:
		goto st_case_0
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 89:
		goto st_case_89
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 90:
		goto st_case_90
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 91:
		goto st_case_91
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	}
	goto st_out
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		switch data[p] {
		case 9:
			goto st1
		case 32:
			goto st1
		case 60:
			goto tr2
		case 95:
			goto tr3
		}
		goto tr0
tr0:
//line parse_actions.rl:75

		if p < len(data) {
			if r := data[p]; r < unicode.MaxASCII {
				return s, fmt.Errorf("%w: unexpected rune %q at %d", ErrInvalid, data[p], p)
			} else {
				return s, fmt.Errorf("%w: unexpected rune %q (\\u%04[2]x) at %d", ErrInvalid, data[p], p)
			}
		}
		return s, ErrIncomplete
	
	goto st0
//line parse.go:275
st_case_0:
	st0:
		cs = 0
		goto _out
tr2:
//line parse_actions.rl:8

		subject = p
	
	goto st2
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
//line parse.go:291
		switch data[p] {
		case 62:
			goto tr5
		case 92:
			goto tr6
		case 95:
			goto tr4
		case 126:
			goto tr4
		}
		switch {
		case data[p] < 61:
			if 33 <= data[p] && data[p] <= 59 {
				goto tr4
			}
		case data[p] > 93:
			switch {
			case data[p] > 122:
				if 128 <= data[p] && data[p] <= 1114111 {
					goto tr4
				}
			case data[p] >= 97:
				goto tr4
			}
		default:
			goto tr4
		}
		goto tr0
tr4:
//line parse_actions.rl:24

		iri = p
	
	goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
//line parse.go:331
		switch data[p] {
		case 62:
			goto tr8
		case 92:
			goto st74
		case 95:
			goto st3
		case 126:
			goto st3
		}
		switch {
		case data[p] < 61:
			if 33 <= data[p] && data[p] <= 59 {
				goto st3
			}
		case data[p] > 93:
			switch {
			case data[p] > 122:
				if 128 <= data[p] && data[p] <= 1114111 {
					goto st3
				}
			case data[p] >= 97:
				goto st3
			}
		default:
			goto st3
		}
		goto tr0
tr5:
//line parse_actions.rl:24

		iri = p
	
//line parse_actions.rl:56

		if iri < 0 {
			panic("unexpected parser state: iri start not set")
		}
		switch u, err := url.Parse(string(data[iri:p])); {
		case err != nil:
			return s, err
		case u.Scheme == "":
			return s, fmt.Errorf("%w: relative IRI ref %q", ErrInvalid, string(data[iri:p]))
		}
	
	goto st4
tr8:
//line parse_actions.rl:56

		if iri < 0 {
			panic("unexpected parser state: iri start not set")
		}
		switch u, err := url.Parse(string(data[iri:p])); {
		case err != nil:
			return s, err
		case u.Scheme == "":
			return s, fmt.Errorf("%w: relative IRI ref %q", ErrInvalid, string(data[iri:p]))
		}
	
	goto st4
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
//line parse.go:397
		switch data[p] {
		case 9:
			goto tr10
		case 32:
			goto tr10
		case 60:
			goto tr11
		}
		goto tr0
tr10:
//line parse_actions.rl:28

		if subject < 0 {
			panic("unexpected parser state: subject start not set")
		}
		s.Subject.Value = string(data[subject:p])
	
	goto st5
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
//line parse.go:421
		switch data[p] {
		case 9:
			goto st5
		case 32:
			goto st5
		case 60:
			goto tr13
		}
		goto tr0
tr11:
//line parse_actions.rl:28

		if subject < 0 {
			panic("unexpected parser state: subject start not set")
		}
		s.Subject.Value = string(data[subject:p])
	
//line parse_actions.rl:12

		predicate = p
	
	goto st6
tr13:
//line parse_actions.rl:12

		predicate = p
	
	goto st6
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
//line parse.go:455
		switch data[p] {
		case 62:
			goto tr15
		case 92:
			goto tr16
		case 95:
			goto tr14
		case 126:
			goto tr14
		}
		switch {
		case data[p] < 61:
			if 33 <= data[p] && data[p] <= 59 {
				goto tr14
			}
		case data[p] > 93:
			switch {
			case data[p] > 122:
				if 128 <= data[p] && data[p] <= 1114111 {
					goto tr14
				}
			case data[p] >= 97:
				goto tr14
			}
		default:
			goto tr14
		}
		goto tr0
tr14:
//line parse_actions.rl:24

		iri = p
	
	goto st7
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
//line parse.go:495
		switch data[p] {
		case 62:
			goto tr18
		case 92:
			goto st65
		case 95:
			goto st7
		case 126:
			goto st7
		}
		switch {
		case data[p] < 61:
			if 33 <= data[p] && data[p] <= 59 {
				goto st7
			}
		case data[p] > 93:
			switch {
			case data[p] > 122:
				if 128 <= data[p] && data[p] <= 1114111 {
					goto st7
				}
			case data[p] >= 97:
				goto st7
			}
		default:
			goto st7
		}
		goto tr0
tr15:
//line parse_actions.rl:24

		iri = p
	
//line parse_actions.rl:56

		if iri < 0 {
			panic("unexpected parser state: iri start not set")
		}
		switch u, err := url.Parse(string(data[iri:p])); {
		case err != nil:
			return s, err
		case u.Scheme == "":
			return s, fmt.Errorf("%w: relative IRI ref %q", ErrInvalid, string(data[iri:p]))
		}
	
	goto st8
tr18:
//line parse_actions.rl:56

		if iri < 0 {
			panic("unexpected parser state: iri start not set")
		}
		switch u, err := url.Parse(string(data[iri:p])); {
		case err != nil:
			return s, err
		case u.Scheme == "":
			return s, fmt.Errorf("%w: relative IRI ref %q", ErrInvalid, string(data[iri:p]))
		}
	
	goto st8
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
//line parse.go:561
		switch data[p] {
		case 9:
			goto tr20
		case 32:
			goto tr20
		case 34:
			goto tr21
		case 60:
			goto tr22
		case 95:
			goto tr23
		}
		goto tr0
tr20:
//line parse_actions.rl:35

		if predicate < 0 {
			panic("unexpected parser state: predicate start not set")
		}
		s.Predicate.Value = string(data[predicate:p])
	
	goto st9
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
//line parse.go:589
		switch data[p] {
		case 9:
			goto st9
		case 32:
			goto st9
		case 34:
			goto tr25
		case 60:
			goto tr26
		case 95:
			goto tr27
		}
		goto tr0
tr21:
//line parse_actions.rl:35

		if predicate < 0 {
			panic("unexpected parser state: predicate start not set")
		}
		s.Predicate.Value = string(data[predicate:p])
	
//line parse_actions.rl:16

		object = p
	
	goto st10
tr25:
//line parse_actions.rl:16

		object = p
	
	goto st10
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
//line parse.go:627
		switch data[p] {
		case 34:
			goto st11
		case 92:
			goto st48
		}
		switch {
		case data[p] < 11:
			if 0 <= data[p] && data[p] <= 9 {
				goto st10
			}
		case data[p] > 12:
			if 14 <= data[p] && data[p] <= 1114111 {
				goto st10
			}
		default:
			goto st10
		}
		goto tr0
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
		switch data[p] {
		case 9:
			goto tr31
		case 32:
			goto tr31
		case 46:
			goto tr32
		case 60:
			goto tr33
		case 64:
			goto st30
		case 94:
			goto st34
		case 95:
			goto tr36
		}
		goto tr0
tr31:
//line parse_actions.rl:42

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		s.Object.Value = string(data[object:p])
	
	goto st12
tr97:
//line parse_actions.rl:42

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		s.Object.Value = string(data[object:p])
	
//line parse_actions.rl:49

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		s.Label.Value = string(data[label:p])
	
	goto st12
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
//line parse.go:699
		switch data[p] {
		case 9:
			goto st12
		case 32:
			goto st12
		case 46:
			goto st87
		case 60:
			goto tr39
		case 95:
			goto tr40
		}
		goto tr0
tr32:
//line parse_actions.rl:42

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		s.Object.Value = string(data[object:p])
	
	goto st87
tr48:
//line parse_actions.rl:49

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		s.Label.Value = string(data[label:p])
	
	goto st87
	st87:
		if p++; p == pe {
			goto _test_eof87
		}
	st_case_87:
//line parse.go:736
		switch data[p] {
		case 9:
			goto st87
		case 32:
			goto st87
		case 35:
			goto tr120
		}
		goto st0
tr120:
//line parse_actions.rl:72

	
	goto st88
	st88:
		if p++; p == pe {
			goto _test_eof88
		}
	st_case_88:
//line parse.go:756
		goto st88
tr33:
//line parse_actions.rl:42

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		s.Object.Value = string(data[object:p])
	
//line parse_actions.rl:20

		label = p
	
	goto st13
tr39:
//line parse_actions.rl:20

		label = p
	
	goto st13
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
//line parse.go:782
		switch data[p] {
		case 62:
			goto tr42
		case 92:
			goto tr43
		case 95:
			goto tr41
		case 126:
			goto tr41
		}
		switch {
		case data[p] < 61:
			if 33 <= data[p] && data[p] <= 59 {
				goto tr41
			}
		case data[p] > 93:
			switch {
			case data[p] > 122:
				if 128 <= data[p] && data[p] <= 1114111 {
					goto tr41
				}
			case data[p] >= 97:
				goto tr41
			}
		default:
			goto tr41
		}
		goto tr0
tr41:
//line parse_actions.rl:24

		iri = p
	
	goto st14
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
//line parse.go:822
		switch data[p] {
		case 62:
			goto tr45
		case 92:
			goto st17
		case 95:
			goto st14
		case 126:
			goto st14
		}
		switch {
		case data[p] < 61:
			if 33 <= data[p] && data[p] <= 59 {
				goto st14
			}
		case data[p] > 93:
			switch {
			case data[p] > 122:
				if 128 <= data[p] && data[p] <= 1114111 {
					goto st14
				}
			case data[p] >= 97:
				goto st14
			}
		default:
			goto st14
		}
		goto tr0
tr42:
//line parse_actions.rl:24

		iri = p
	
//line parse_actions.rl:56

		if iri < 0 {
			panic("unexpected parser state: iri start not set")
		}
		switch u, err := url.Parse(string(data[iri:p])); {
		case err != nil:
			return s, err
		case u.Scheme == "":
			return s, fmt.Errorf("%w: relative IRI ref %q", ErrInvalid, string(data[iri:p]))
		}
	
	goto st15
tr45:
//line parse_actions.rl:56

		if iri < 0 {
			panic("unexpected parser state: iri start not set")
		}
		switch u, err := url.Parse(string(data[iri:p])); {
		case err != nil:
			return s, err
		case u.Scheme == "":
			return s, fmt.Errorf("%w: relative IRI ref %q", ErrInvalid, string(data[iri:p]))
		}
	
	goto st15
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
//line parse.go:888
		switch data[p] {
		case 9:
			goto tr47
		case 32:
			goto tr47
		case 46:
			goto tr48
		}
		goto tr0
tr47:
//line parse_actions.rl:49

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		s.Label.Value = string(data[label:p])
	
	goto st16
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
//line parse.go:912
		switch data[p] {
		case 9:
			goto st16
		case 32:
			goto st16
		case 46:
			goto st87
		}
		goto tr0
tr43:
//line parse_actions.rl:24

		iri = p
	
	goto st17
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
//line parse.go:933
		switch data[p] {
		case 85:
			goto st18
		case 117:
			goto st22
		}
		goto tr0
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st19
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st19
			}
		default:
			goto st19
		}
		goto tr0
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st20
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st20
			}
		default:
			goto st20
		}
		goto tr0
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st21
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st21
			}
		default:
			goto st21
		}
		goto tr0
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st22
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st22
			}
		default:
			goto st22
		}
		goto tr0
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st23
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st23
			}
		default:
			goto st23
		}
		goto tr0
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st24
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st24
			}
		default:
			goto st24
		}
		goto tr0
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st25
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st25
			}
		default:
			goto st25
		}
		goto tr0
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st14
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st14
			}
		default:
			goto st14
		}
		goto tr0
tr36:
//line parse_actions.rl:42

		if object < 0 {
			panic("unexpected parser state: object start not set")
		}
		s.Object.Value = string(data[object:p])
	
//line parse_actions.rl:20

		label = p
	
	goto st26
tr40:
//line parse_actions.rl:20

		label = p
	
	goto st26
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
//line parse.go:1109
		if data[p] == 58 {
			goto st27
		}
		goto tr0
	st27:
		if p++; p == pe {
			goto _test_eof27
		}
	st_case_27:
		if data[p] == 95 {
			goto st28
		}
		switch {
		case data[p] < 895:
			switch {
			case data[p] < 192:
				switch {
				case data[p] < 65:
					if 48 <= data[p] && data[p] <= 58 {
						goto st28
					}
				case data[p] > 90:
					if 97 <= data[p] && data[p] <= 122 {
						goto st28
					}
				default:
					goto st28
				}
			case data[p] > 214:
				switch {
				case data[p] < 248:
					if 216 <= data[p] && data[p] <= 246 {
						goto st28
					}
				case data[p] > 767:
					if 880 <= data[p] && data[p] <= 893 {
						goto st28
					}
				default:
					goto st28
				}
			default:
				goto st28
			}
		case data[p] > 8191:
			switch {
			case data[p] < 12289:
				switch {
				case data[p] < 8304:
					if 8204 <= data[p] && data[p] <= 8205 {
						goto st28
					}
				case data[p] > 8591:
					if 11264 <= data[p] && data[p] <= 12271 {
						goto st28
					}
				default:
					goto st28
				}
			case data[p] > 55295:
				switch {
				case data[p] < 65008:
					if 63744 <= data[p] && data[p] <= 64975 {
						goto st28
					}
				case data[p] > 65533:
					if 65536 <= data[p] && data[p] <= 983039 {
						goto st28
					}
				default:
					goto st28
				}
			default:
				goto st28
			}
		default:
			goto st28
		}
		goto tr0
	st28:
		if p++; p == pe {
			goto _test_eof28
		}
	st_case_28:
		switch data[p] {
		case 9:
			goto tr47
		case 32:
			goto tr47
		case 45:
			goto st28
		case 46:
			goto tr60
		case 95:
			goto st28
		case 183:
			goto st28
		}
		switch {
		case data[p] < 8204:
			switch {
			case data[p] < 192:
				switch {
				case data[p] < 65:
					if 48 <= data[p] && data[p] <= 58 {
						goto st28
					}
				case data[p] > 90:
					if 97 <= data[p] && data[p] <= 122 {
						goto st28
					}
				default:
					goto st28
				}
			case data[p] > 214:
				switch {
				case data[p] < 248:
					if 216 <= data[p] && data[p] <= 246 {
						goto st28
					}
				case data[p] > 893:
					if 895 <= data[p] && data[p] <= 8191 {
						goto st28
					}
				default:
					goto st28
				}
			default:
				goto st28
			}
		case data[p] > 8205:
			switch {
			case data[p] < 12289:
				switch {
				case data[p] < 8304:
					if 8255 <= data[p] && data[p] <= 8256 {
						goto st28
					}
				case data[p] > 8591:
					if 11264 <= data[p] && data[p] <= 12271 {
						goto st28
					}
				default:
					goto st28
				}
			case data[p] > 55295:
				switch {
				case data[p] < 65008:
					if 63744 <= data[p] && data[p] <= 64975 {
						goto st28
					}
				case data[p] > 65533:
					if 65536 <= data[p] && data[p] <= 983039 {
						goto st28
					}
				default:
					goto st28
				}
			default:
				goto st28
			}
		default:
			goto st28
		}
		goto tr0
tr60:
//line parse_actions.rl:49

		if label < 0 {
			panic("unexpected parser state: label start not set")
		}
		s.Label.Value = string(data[label:p])
	
	goto st89
	st89:
		if p++; p == pe {
			goto _test_eof89
		}
	st_case_89:
//line parse.go:1289
		switch data[p] {
		case 9:
			goto st87
		case 32:
			goto st87
		case 35:
			goto tr120
		case 45:
			goto st28
		case 46:
			goto st29
		case 95:
			goto st28
		case 183:
			goto st28
		}
		switch {
		case data[p] < 8204:
			switch {
			case data[p] < 192:
				switch {
				case data[p] < 65:
					if 48 <= data[p] && data[p] <= 58 {
						goto st28
					}
				case data[p] > 90:
					if 97 <= data[p] && data[p] <= 122 {
						goto st28
					}
				default:
					goto st28
				}
			case data[p] > 214:
				switch {
				case data[p] < 248:
					if 216 <= data[p] && data[p] <= 246 {
						goto st28
					}
				case data[p] > 893:
					if 895 <= data[p] && data[p] <= 8191 {
						goto st28
					}
				default:
					goto st28
				}
			default:
				goto st28
			}
		case data[p] > 8205:
			switch {
			case data[p] < 12289:
				switch {
				case data[p] < 8304:
					if 8255 <= data[p] && data[p] <= 8256 {
						goto st28
					}
				case data[p] > 8591:
					if 11264 <= data[p] && data[p] <= 12271 {
						goto st28
					}
				default:
					goto st28
				}
			case data[p] > 55295:
				switch {
				case data[p] < 65008:
					if 63744 <= data[p] && data[p] <= 64975 {
						goto st28
					}
				case data[p] > 65533:
					if 65536 <= data[p] && data[p] <= 983039 {
						goto st28
					}
				default:
					goto st28
				}
			default:
				goto st28
			}
		default:
			goto st28
		}
		goto st0
	st29:
		if p++; p == pe {
			goto _test_eof29
		}
	st_case_29:
		switch data[p] {
		case 45:
			goto st28
		case 46:
			goto st29
		case 95:
			goto st28
		case 183:
			goto st28
		}
		switch {
		case data[p] < 8204:
			switch {
			case data[p] < 192:
				switch {
				case data[p] < 65:
					if 48 <= data[p] && data[p] <= 58 {
						goto st28
					}
				case data[p] > 90:
					if 97 <= data[p] && data[p] <= 122 {
						goto st28
					}
				default:
					goto st28
				}
			case data[p] > 214:
				switch {
				case data[p] < 248:
					if 216 <= data[p] && data[p] <= 246 {
						goto st28
					}
				case data[p] > 893:
					if 895 <= data[p] && data[p] <= 8191 {
						goto st28
					}
				default:
					goto st28
				}
			default:
				goto st28
			}
		case data[p] > 8205:
			switch {
			case data[p] < 12289:
				switch {
				case data[p] < 8304:
					if 8255 <= data[p] && data[p] <= 8256 {
						goto st28
					}
				case data[p] > 8591:
					if 11264 <= data[p] && data[p] <= 12271 {
						goto st28
					}
				default:
					goto st28
				}
			case data[p] > 55295:
				switch {
				case data[p] < 65008:
					if 63744 <= data[p] && data[p] <= 64975 {
						goto st28
					}
				case data[p] > 65533:
					if 65536 <= data[p] && data[p] <= 983039 {
						goto st28
					}
				default:
					goto st28
				}
			default:
				goto st28
			}
		default:
			goto st28
		}
		goto tr0
	st30:
		if p++; p == pe {
			goto _test_eof30
		}
	st_case_30:
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st31
			}
		case data[p] >= 65:
			goto st31
		}
		goto tr0
	st31:
		if p++; p == pe {
			goto _test_eof31
		}
	st_case_31:
		switch data[p] {
		case 9:
			goto tr31
		case 32:
			goto tr31
		case 45:
			goto st32
		case 46:
			goto tr32
		case 60:
			goto tr33
		case 95:
			goto tr36
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st31
			}
		case data[p] >= 65:
			goto st31
		}
		goto tr0
	st32:
		if p++; p == pe {
			goto _test_eof32
		}
	st_case_32:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st33
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st33
			}
		default:
			goto st33
		}
		goto tr0
	st33:
		if p++; p == pe {
			goto _test_eof33
		}
	st_case_33:
		switch data[p] {
		case 9:
			goto tr31
		case 32:
			goto tr31
		case 45:
			goto st32
		case 46:
			goto tr32
		case 60:
			goto tr33
		case 95:
			goto tr36
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st33
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st33
			}
		default:
			goto st33
		}
		goto tr0
	st34:
		if p++; p == pe {
			goto _test_eof34
		}
	st_case_34:
		if data[p] == 94 {
			goto st35
		}
		goto tr0
	st35:
		if p++; p == pe {
			goto _test_eof35
		}
	st_case_35:
		if data[p] == 60 {
			goto st36
		}
		goto tr0
tr22:
//line parse_actions.rl:35

		if predicate < 0 {
			panic("unexpected parser state: predicate start not set")
		}
		s.Predicate.Value = string(data[predicate:p])
	
//line parse_actions.rl:16

		object = p
	
	goto st36
tr26:
//line parse_actions.rl:16

		object = p
	
	goto st36
	st36:
		if p++; p == pe {
			goto _test_eof36
		}
	st_case_36:
//line parse.go:1589
		switch data[p] {
		case 62:
			goto tr68
		case 92:
			goto tr69
		case 95:
			goto tr67
		case 126:
			goto tr67
		}
		switch {
		case data[p] < 61:
			if 33 <= data[p] && data[p] <= 59 {
				goto tr67
			}
		case data[p] > 93:
			switch {
			case data[p] > 122:
				if 128 <= data[p] && data[p] <= 1114111 {
					goto tr67
				}
			case data[p] >= 97:
				goto tr67
			}
		default:
			goto tr67
		}
		goto tr0
tr67:
//line parse_actions.rl:24

		iri = p
	
	goto st37
	st37:
		if p++; p == pe {
			goto _test_eof37
		}
	st_case_37:
//line parse.go:1629
		switch data[p] {
		case 62:
			goto tr71
		case 92:
			goto st39
		case 95:
			goto st37
		case 126:
			goto st37
		}
		switch {
		case data[p] < 61:
			if 33 <= data[p] && data[p] <= 59 {
				goto st37
			}
		case data[p] > 93:
			switch {
			case data[p] > 122:
				if 128 <= data[p] && data[p] <= 1114111 {
					goto st37
				}
			case data[p] >= 97:
				goto st37
			}
		default:
			goto st37
		}
		goto tr0
tr68:
//line parse_actions.rl:24

		iri = p
	
//line parse_actions.rl:56

		if iri < 0 {
			panic("unexpected parser state: iri start not set")
		}
		switch u, err := url.Parse(string(data[iri:p])); {
		case err != nil:
			return s, err
		case u.Scheme == "":
			return s, fmt.Errorf("%w: relative IRI ref %q", ErrInvalid, string(data[iri:p]))
		}
	
	goto st38
tr71:
//line parse_actions.rl:56

		if iri < 0 {
			panic("unexpected parser state: iri start not set")
		}
		switch u, err := url.Parse(string(data[iri:p])); {
		case err != nil:
			return s, err
		case u.Scheme == "":
			return s, fmt.Errorf("%w: relative IRI ref %q", ErrInvalid, string(data[iri:p]))
		}
	
	goto st38
	st38:
		if p++; p == pe {
			goto _test_eof38
		}
	st_case_38:
//line parse.go:1695
		switch data[p] {
		case 9:
			goto tr31
		case 32:
			goto tr31
		case 46:
			goto tr32
		case 60:
			goto tr33
		case 95:
			goto tr36
		}
		goto tr0
tr69:
//line parse_actions.rl:24
